alignment fix

--- a/style.css
+++ b/style.css
@@ -64,13 +64,13 @@ header {
 }
 
 .site_title {
-  position: absolute;
+  position: relative;
   top: 25%;
-  left: 35%;
   z-index: 2;
   font-family: 'Roboto' sans-serif;
   color:rgb(255, 255, 255);
   text-align:center;
+  margin: 0 auto;
 }
 
 .site_title h1{
